--- a/debian/rules
+++ b/debian/rules
@@ -4,5 +4,8 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 	        --disable-static
 
+override_dh_auto_install:
+	dh_auto_install -- INSTALL_SYMLINKS=1
+
 %:
 	dh $@
